--- a/style.css
+++ b/style.css
@@ -1,46 +1,166 @@
-*{
+:root{
     background-color: lightblue;
-}
-header{
-    text-align: center;
-    border-color: rgb(0, 0, 0);
-    border-style: solid;
-    border-width: 5px;
-}
-
-footer{
-    position:fixed;
-    bottom:0;
-    left:0;
-
-}
-
-li{
-    display: block;
-    color:black;
-    text-align: center;
-    padding: 15px;
-    float: right;
-}
-
-#highscores:hover{
- background-color: blue;
-}
-
-button {
-    display: inline-block;
-    font-family: sans-serif;
-    background-color: rgb(156, 114, 224);
-    border: 3px solid black;
-    color: black;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    width: 200px;
-    margin-top: 3px;
-  }
-
-  input{
-    text-align: center;
-}
+    
+    }
+    
+    
+    
+    
+    li{
+        padding-bottom: 3px;
+        color: white;
+       
+        list-style-type: none;
+    }
+    
+    p{
+        color: white;
+        text-align: center;
+        font-size: 24px;
+        font-family: 'Londrina Solid', cursive;
+       
+    
+    }
+    h2{
+        font-family: 'Londrina Solid', cursive;
+        font-size: 32px;
+       
+        margin-top: -.5rem;
+    }
+    input{
+        text-align: center;
+    }
+    
+    #btnborder {
+        border: 2px transparent;
+        padding: 3px;
+    }
+    
+    .container {
+        padding: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 80rem;
+        margin: 0 auto;
+      }
+    
+      button {
+        display: inline-block;
+        font-family: sans-serif;
+        background-color: white;
+        border-radius: 10px;
+        border: 3px double black;
+        color: black;
+        text-align: center;
+        font-size: 20px;
+        padding: 20px;
+        width: 200px;
+        margin-top: 3px;
+      }
+    
+      button:hover{
+          box-shadow: 4px 3px 6px black;
+      }
+    
+    #startpage{
+        margin-top: 150px;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    #timer{
+        font-family: sans-serif;
+        background-color: white;
+        color: black;
+        font-size: x-large;
+        
+        text-align: center;
+    }
+    #quiz {
+        margin-top: 150px;
+        display: none;
+    }
+    
+    #result {
+        display: none;
+    }
+    
+    #gameover {
+        font-family: sans-serif;
+        
+        margin-top: 150px;
+        color: white;
+        text-align: center;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    #highScore{
+        height: 1.5rem;
+        border: groove 2px;
+    }
+    
+    #high-scorePage{
+        margin-top: 150px;
+        display: none;
+        width: 50%;
+        border: solid;
+        border-color: white;
+        border-bottom-style: groove;
+        padding-bottom: .3rem;
+        background: black;
+    }
+    
+    #highscore-header{
+        display:flex;
+        justify-content: space-around;
+        border-bottom-style: outset;
+        margin-bottom: .5rem;
+        background-color: white;
+        color: black;
+        font-family: sans-serif;
+    }
+    #highscoreContainer{
+        height: 100%;
+        width: 100%;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #initials{
+        margin: .5rem;
+        height: 1.75rem;
+    }
+    
+    #highscore-initials{
+        display: inline-block;
+        padding-left: 9.5rem;
+        font-family: sans-serif;
+        font-weight: bold;
+    }
+    
+    #highscore-score{
+        float: right;
+        padding-right: 8.75rem;
+        font-family: sans-serif;
+        font-weight: bold;
+    }
+    
+    #finalScore{
+        padding-bottom: 0.5rem;
+        font-size: x-large;
+        font-family: sans-serif;
+        font-weight: bold;
+    }
+    
+    #endGameBtns{
+        display: none;
+    }
+  
 
